<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="E_State" Id="{0ac5aa75-bc02-41ce-a495-b821ffe876f1}">
    <Declaration><![CDATA[TYPE E_State :
(
	// Disabled
	eDisabled :=0,
	// Enabled
	eEnabled
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>